fixed all issue with code
